# scacchi-TCF

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  someFen.txt
UML/: UML diagrams.xmi  class_diagram.uxf  game_loop_activity_diagram.uxf  move_activity_diagram.uxf  use_case_diagram.uxf
include/: Bishop.hh  Board.hh  BoardFactory.hh  BoardRenderer.hh  Coordinate.hh  Coordinates.hh  Factory.hh  GameManager.hh  Movement.hh  Piece.hh  PieceMover.hh  Square.hh  Utils.hh
include/movers/: CastlingMover.hh  EnPassantMover.hh  NormalMover.hh  PromotionMover.hh
include/pieces/: Bishop.hh  King.hh  Knight.hh  Pawn.hh  Queen.hh  Rook.hh  VoidPiece.hh
include/renderers/: ColoredBoardRenderer.hh  InvertedBoardRenderer.hh  NormalBoardRenderer.hh  SimplifiedBoardRenderer.hh
src/: Bishop.cpp  Board.cpp  BoardFactory.cpp  BoardRenderer.cpp  Coordinate.cpp  Coordinates.cpp  Factory.cpp  GameManager.cpp  King.cpp  Movement.cpp  Pawn.cpp  Piece.cpp  Square.cpp  Utils.cpp
src/movers/: CastlingMover.cpp  EnPassantMover.cpp  NormalMover.cpp  PromotionMover.cpp
src/pieces/: Bishop.cpp  King.cpp  Knight.cpp  Pawn.cpp  Queen.cpp  Rook.cpp  VoidPiece.cpp
src/renderers/: ColoredBoarRenderer.cpp  ColoredBoardRenderer.cpp  InvertedBoardRenderer.cpp  NormalBoarRenderer.cpp  NormalBoardRenderer.cpp  SimplifiedBoardRenderer.cpp
trashcan/: BoardSetup.cpp
utils/: demoFen.txt  demo_fen.txt  help.txt  settings.txt  welcome.txt
utils/end_game/: checkmate.txt  checkmate_black.txt  checkmate_white.txt  material.txt  repetition.txt  stalemate.txt
